--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
+EasyProcess==0.1.6
+PyVirtualDisplay==0.1.5
+PyYAML==3.11
 argparse==1.2.1
 beautifulsoup4==4.3.2
+docker-py==0.5.3
+dockerpty==0.3.2
+docopt==0.6.2
+fig==1.0.1
 requests==2.4.3
+selenium==2.44.0
+six==1.8.0
+texttable==0.8.1
+websocket-client==0.11.0
 wsgiref==0.1.2
